--- a/src/sass/layout/_player.scss
+++ b/src/sass/layout/_player.scss
@@ -108,11 +108,6 @@
                 margin-bottom: 40px;
 
                 &--last {
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    right: 0;
-
                     & .player-button.playlist-toggle-btn {
                         margin: auto;
                     }
